# flash-attention

./: CMakeLists.txt  copy_dlls.ps1
hopper/: flash_bwd.comp  flash_bwd_launch_template.h  flash_fwd_kernel_sm80.h  flash_fwd_launch_template.h  flash_math_constants.h  main.cpp  mainloop_bwd_sm80.hpp  mainloop_fwd_sm80.hpp  mask.h  static_switch.h  utils.h
hopper/instantiations/: flash_bwd_hdim64_fp16_sm80.cu  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim64_fp16_sm80.cu
